--- a/src/style.css
+++ b/src/style.css
@@ -658,6 +658,10 @@ html,
   margin-top: 0.5rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -718,6 +722,18 @@ html,
   height: 120px;
 }
 
+.h-2\/5 {
+  height: 40%;
+}
+
+.h-3\/5 {
+  height: 60%;
+}
+
+.h-auto {
+  height: auto;
+}
+
 .w-full {
   width: 100%;
 }
@@ -752,6 +768,10 @@ html,
 
 .w-1\/4 {
   width: 25%;
+}
+
+.w-\[200px\] {
+  width: 200px;
 }
 
 .grid-cols-5 {
@@ -806,6 +826,10 @@ html,
 
 .gap-y-2 {
   row-gap: 0.5rem;
+}
+
+.gap-y-6 {
+  row-gap: 1.5rem;
 }
 
 .overflow-scroll {
@@ -942,6 +966,10 @@ html,
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .text-center {
