--- a/src/style.css
+++ b/src/style.css
@@ -620,11 +620,6 @@ html,
   margin-right: auto;
 }
 
-.my-1 {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}
-
 .mx-32 {
   margin-left: 8rem;
   margin-right: 8rem;
@@ -658,10 +653,6 @@ html,
   margin-top: 0.5rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
 .flex {
   display: flex;
 }
@@ -680,10 +671,6 @@ html,
 
 .h-11 {
   height: 2.75rem;
-}
-
-.h-10 {
-  height: 2.5rem;
 }
 
 .\!h-screen {
@@ -706,8 +693,12 @@ html,
   height: 620px;
 }
 
-.h-1\/2 {
-  height: 50%;
+.h-2\/5 {
+  height: 40%;
+}
+
+.h-auto {
+  height: auto;
 }
 
 .h-\[585px\] {
@@ -722,28 +713,12 @@ html,
   height: 120px;
 }
 
-.h-2\/5 {
-  height: 40%;
-}
-
-.h-3\/5 {
-  height: 60%;
-}
-
-.h-auto {
-  height: auto;
-}
-
 .w-full {
   width: 100%;
 }
 
 .w-11 {
   width: 2.75rem;
-}
-
-.w-\[150px\] {
-  width: 150px;
 }
 
 .w-60 {
@@ -768,10 +743,6 @@ html,
 
 .w-1\/4 {
   width: 25%;
-}
-
-.w-\[200px\] {
-  width: 200px;
 }
 
 .grid-cols-5 {
@@ -828,10 +799,6 @@ html,
   row-gap: 0.5rem;
 }
 
-.gap-y-6 {
-  row-gap: 1.5rem;
-}
-
 .overflow-scroll {
   overflow: scroll;
 }
@@ -843,14 +810,6 @@ html,
 .break-normal {
   overflow-wrap: normal;
   word-break: normal;
-}
-
-.break-words {
-  overflow-wrap: break-word;
-}
-
-.break-all {
-  word-break: break-all;
 }
 
 .rounded-xl {
@@ -888,19 +847,14 @@ html,
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
+.bg-red-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -936,11 +890,6 @@ html,
   padding-right: 0.5rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -956,6 +905,16 @@ html,
   padding-right: 4rem;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .pr-4 {
   padding-right: 1rem;
 }
@@ -968,8 +927,8 @@ html,
   padding-top: 1rem;
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -1151,9 +1110,19 @@ html,
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-black:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.focus\:bg-black:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-black {
